--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <title>Server Side APIs Challenge: Weather Dashboard</title>
-   <link rel="stylesheet" href="../Server-Side-APIs-Challenge-Weather-Dashboard/Assets/css/style.css"/>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <title>Server Side APIs Challenge: Weather Dashboard</title>
+  <link rel="stylesheet" href="../Server-Side-APIs-Challenge-Weather-Dashboard/Assets/css/style.css" />
 </head>
+
 <body>
-    
-    <script src="../Server-Side-APIs-Challenge-Weather-Dashboard/Assets/js/script.js"></script>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <form id='search-form'>
+          <label for = 'cityName'>Search for a City:
+            <input id="cityName" class="form-control" placeholder="Kansas City" value = ''/>
+            <button id="searchButton" type="submit">Search</button>
+          </label>
+      </div>
+      </form>
+      <div class="col-9 border-start">
+        <div class="jumbotron text-start">
+          <h1 id="location"></h1>
+          <p class="lead">Boilerplate</p>
+          <p>
+            It uses utility classes for typography and spacing to space
+            content out within the larger container.
+          </p>
+        </div>
+        <div id="forecast" class="row"></div>
+      </div>
+    </div>
+  </div>
+  <script src="./Assets/js/script.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
 </body>
+
 </html>
